# dnit-normative-rag

./: .env.example  .gitignore  LICENSE  README.md  app.py  normativas.py  pyproject.toml  rag.py  rag_core.py  requirements.txt
