[project]
name = "dnit-normative-rag"
version = "1.0.0"
description = "RAG de normas técnicas do DNIT com pipeline didático em Streamlit"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort (ordem dos imports)
    "UP",  # modernizações de sintaxe
    "B",   # bugbear (armadilhas comuns)
]
